[package]
name = "libfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.4", features = ["rb-sys-interop"] }
rb-sys = { version = "0.9", features = ["ruby-macros"] }
subprocess = "0.2.9"
ron = "0.8.0"
serde = "1.0"
parking_lot = "0.12.1"