[package]
name = "libfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5", features = ["rb-sys-interop"] }
rb-sys = { version = "0.9", features = ["ruby-macros"] }

parking_lot = "0.12.1"

interprocess = "1.2"

screen = { version = "*", path = "../screen" }
ron = "0.8"
