[package]
name = "libfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5", features = ["rb-sys-interop"] }
rb-sys = { version = "0.9", features = ["ruby-macros"] }

parking_lot = "0.12.1"

interprocess = { version = "1.2", features = ["tokio_support"] }

screen = { version = "*", path = "../screen" }
async-bincode = { version = "0.7", default-features = false, features = [
    "futures",
] }
bincode = "1.3" # we *have* to do this cause async bincode is a piece of SHIT.
futures = "0.3"
tokio = { version = "1.27", features = ["rt"] } # kill me

rand = "0.8.5"
