[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
serde = "1.0"
winit = "0.27.5"
image = "0.24.5"
crossbeam-channel = "0.5.6"
glutin = "0.30.1"
glutin-winit = "0.2.1"
glow = "0.11.2"
raw-window-handle = "0.5.0"
bytemuck = "1.12.3"
