[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.12"
winit = "0.28"

serde = { version = "*", features = ["derive"] }
ron = "0.8"

interprocess = { version = "1.2", features = ["tokio_support"] }
tokio = { version = "1.27", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
