[package]
name = "screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.0"
winit = "0.28"

serde = { version = "*", features = ["derive"] }
async-bincode = { version = "0.7.0", default-features = false, features = [
    "futures",
] }

interprocess = { version = "1.2", features = ["tokio_support"] }
tokio = { version = "1.27", features = ["full"] }
futures = "0.3.28"

image = "0.24"
indexmap = "1.9"
